--- a/html/homapage.html
+++ b/html/homapage.html
@@ -136,26 +136,31 @@
                 <div class=" tab__main d-flex align-items-start">
                     <div class="row">
                         <div class="col-4">
-                            <div class="nav flex-column nav-pills me-3 align-items-end tab__column" id="v-pills-tab" role="tablist"
-                                 aria-orientation="vertical">
-                                <button class="nav-link active tab__link" id="v-pills-home-tab" data-bs-toggle="pill"
-                                        data-bs-target="#v-pills-home" type="button" role="tab"
-                                        aria-controls="v-pills-home"
-                                        aria-selected="true">Consistent
-                                </button>
-                                <button class="nav-link tab__link" id="v-pills-profile-tab" data-bs-toggle="pill"
-                                        data-bs-target="#v-pills-profile" type="button" role="tab"
-                                        aria-controls="v-pills-profile" aria-selected="false">Customer oriented
-                                </button>
-                                <button class="nav-link tab__link" id="v-pills-messages-tab" data-bs-toggle="pill"
-                                        data-bs-target="#v-pills-messages" type="button" role="tab"
-                                        aria-controls="v-pills-messages" aria-selected="false">Innovative
-                                </button>
-                                <button class="nav-link tab__link" id="v-pills-settings-tab" data-bs-toggle="pill"
-                                        data-bs-target="#v-pills-settings" type="button" role="tab"
-                                        aria-controls="v-pills-settings" aria-selected="false">Business oriented
-                                </button>
+                            <div class="wrapper">
+                                <div class="scroll">
+                                        <div class="nav flex-column nav-pills me-3 align-items-end tab__column" id="v-pills-tab" role="tablist"
+                                             aria-orientation="vertical">
+                                            <button class="nav-link active tab__link" id="v-pills-home-tab" data-bs-toggle="pill"
+                                                    data-bs-target="#v-pills-home" type="button" role="tab"
+                                                    aria-controls="v-pills-home"
+                                                    aria-selected="true">Consistent
+                                            </button>
+                                            <button class="nav-link tab__link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                                                    data-bs-target="#v-pills-profile" type="button" role="tab"
+                                                    aria-controls="v-pills-profile" aria-selected="false">Customer oriented
+                                            </button>
+                                            <button class="nav-link tab__link" id="v-pills-messages-tab" data-bs-toggle="pill"
+                                                    data-bs-target="#v-pills-messages" type="button" role="tab"
+                                                    aria-controls="v-pills-messages" aria-selected="false">Innovative
+                                            </button>
+                                            <button class="nav-link tab__link" id="v-pills-settings-tab" data-bs-toggle="pill"
+                                                    data-bs-target="#v-pills-settings" type="button" role="tab"
+                                                    aria-controls="v-pills-settings" aria-selected="false">Business oriented
+                                            </button>
+                                        </div>
+                                </div>
                             </div>
+
                         </div>
                         <div class="col-8">
                             <div class="tab-content d-flex flex-column justify-content-center" id="v-pills-tabContent">
