--- a/html/homapage.html
+++ b/html/homapage.html
@@ -138,6 +138,9 @@
                         <div class="col-4">
                             <div class="wrapper">
                                 <div class="scroll">
+                                    <nav>
+
+
                                         <div class="nav flex-column nav-pills me-3 align-items-end tab__column" id="v-pills-tab" role="tablist"
                                              aria-orientation="vertical">
                                             <button class="nav-link active tab__link" id="v-pills-home-tab" data-bs-toggle="pill"
@@ -158,6 +161,7 @@
                                                     aria-controls="v-pills-settings" aria-selected="false">Business oriented
                                             </button>
                                         </div>
+                                    </nav>
                                 </div>
                             </div>
 
