--- a/html/homapage.html
+++ b/html/homapage.html
@@ -133,15 +133,12 @@
         </section>
         <section class="tab">
             <div class="container">
-                <div class=" tab__main d-flex align-items-start">
+                <div class=" tab__main d-lg-flex d-block align-items-start">
                     <div class="row">
                         <div class="col-4">
                             <div class="wrapper">
                                 <div class="scroll">
-                                    <nav>
-
-
-                                        <div class="nav flex-column nav-pills me-3 align-items-end tab__column" id="v-pills-tab" role="tablist"
+                                        <div class="nav flex-lg-wrap flex-nowrap flex-column nav-pills me-3 align-items-end tab__column" id="v-pills-tab" role="tablist"
                                              aria-orientation="vertical">
                                             <button class="nav-link active tab__link" id="v-pills-home-tab" data-bs-toggle="pill"
                                                     data-bs-target="#v-pills-home" type="button" role="tab"
@@ -161,7 +158,6 @@
                                                     aria-controls="v-pills-settings" aria-selected="false">Business oriented
                                             </button>
                                         </div>
-                                    </nav>
                                 </div>
                             </div>
 
