--- a/html/team.html
+++ b/html/team.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/team.css">
@@ -123,75 +124,75 @@
     </div>
     <section class="cards">
 <div class="row">
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img1"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Alexander Alexandrovsky</h2>
+                <p class="team__card-text-p">Managing partner</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="team__card-icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img2"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Evgeny Patrikov</h2>
+                <p class="team__card-text-p">Equity partner, Attorney-at-law</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="card__icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img3"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Vladislav Melnik</h2>
+                <p class="team__card-text-p">Associate</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="team__card-icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img4"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Sergey Binn</h2>
+                <p class="team__card-text-p">Associate</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="team__card-icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img5"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Oksana Kobzar</h2>
+                <p class="team__card-text-p">Equity partner, Attorney-at-law</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="team__card-icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
-    <div class="col-4">
+    <div class=" col-xs col-sm-5 col-md-3">
         <div class="team__card-img6"></div>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between team__card-wrapper">
             <div class="team__card-text">
-                <h2 class="team__card-text-heading"></h2>
-                <p class="team__card-text-p"></p>
+                <h2 class="team__card-text-heading">Julia Wolk</h2>
+                <p class="team__card-text-p">Associate, Attorney-at-law</p>
             </div>
             <div class="team__card-icon">
-                <a href="#" class="team__card-icon-a"></a>
+                <a href="#" class="team__card-icon-a"><i class="bi bi-chevron-right"></i></a>
             </div>
         </div>
     </div>
