--- a/html/publication-entry.html
+++ b/html/publication-entry.html
@@ -195,7 +195,7 @@
                     <div class="col-4 first-card">
                         <div class="card news__cards-1" >
                             <div class="card-img" >
-                                <img src="../assets/news_card1.svg" class="card-img-top" alt="...">
+                                <img src="../assets/news-card1.svg" class="card-img-top" alt="...">
                             </div>
 
                             <div class="card-body">
@@ -209,7 +209,7 @@
                     <div class="col-4">
                         <div class="card news__cards-2" >
                             <div class="card-img" >
-                                <img src="../assets/news_card2.svg" class="card-img-top" alt="...">
+                                <img src="../assets/news-card2.svg" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h5>
@@ -222,7 +222,7 @@
                     <div class="col-4 main-card">
                         <div class="card news__cards-3" >
                             <div class="card-img" >
-                                <img src="../assets/news_card3.svg" class="card-img-top" alt="...">
+                                <img src="../assets/publications-photo2.svg" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Millennial Testament</h5>
