--- a/html/publications.html
+++ b/html/publications.html
@@ -129,7 +129,7 @@
                         <div class="col-4">
                             <div class="card publications__articles-cards-1">
                                 <div class="card-img">
-                                    <img src="../assets/news_card1.svg" class="card-img-top" alt="...">
+                                    <img src="../assets/news-card1.svg" class="card-img-top" alt="...">
                                 </div>
 
                                 <div class="card-body">
@@ -144,7 +144,7 @@
                         <div class="col-4">
                             <div class="card publications__articles-cards-2">
                                 <div class="card-img">
-                                    <img src="../assets/news_card2.svg" class="card-img-top" alt="...">
+                                    <img src="../assets/news-card2.svg" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Penalty for the Good Corporation: what will happen to Google
@@ -160,7 +160,7 @@
                         <div class="col-4 main-card">
                             <div class="card publications__articles-cards-3">
                                 <div class="card-img">
-                                    <img src="../assets/news_card3.svg" class="card-img-top" alt="...">
+                                    <img src="../assets/publications-photo2.svg" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Millennial Testament</h5>
